--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 .header {
   background-color: rgb(209, 180, 15);
   color: black;
-  display:flex;
-  justify-content:space-between;
+  display: flex;
+  justify-content: space-between;
 }
 h2 {
   color: white;
@@ -20,6 +20,9 @@ p {
   overflow: hidden;
   width: 100%;
   height: 100vh;
-  display:flex;
-  justify-content:center;
+  display: flex;
+  justify-content: center;
+}
+.photoFrame {
+  border: groove 10px gold;
 }
