--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
-body { background-color:black;
-   background-image: url(background-image.jpg);
-  overflow-x:hidden; 
+body {
+  background-color: black;
+  background-image: url(background-image.jpg);
+  overflow-x: hidden;
 }
-.header {
+body h2 {
+  color: white;
+  margin: 40px;
+}
+body p {
+  color: white;
+}
+body .header {
   background-color: rgba(185, 136, 0, 0.5);
   color: white;
   display: flex;
   justify-content: space-between;
-}
-h2 {
-  color: white;
-  margin: 40px;
-}
-p {
-  color: white;
 }
 
 .video-container {
@@ -23,26 +24,31 @@ p {
   display: flex;
   justify-content: center;
 }
-.photoFrame {
-  border: groove 10px rgb(185, 136, 0);
-  padding:10px;
-  background-color:white
-}
+
 .list-group {
-    width:100%;
+  width: 100%;
 }
 
-.container img{width:300px; margin:20px;}
-.testamonyPictures img{width:90%;
-margin-top:10px;
+.container img {
+  width: 300px;
+  margin: 20px;
 }
-.fade-in-card{
-  opacity:50%;
-  transition:opacity 1s;
+
+.testamonyPictures img {
+  width: 90%;
+  margin-top: 10px;
 }
-.fade-in-card:hover {
-  opacity: 100%;
+
+.fade-in-card {
+  opacity: 0.5;
   transition: opacity 1s;
 }
-label {color:white}
 
+.fade-in-card:hover {
+  opacity: 1;
+  transition: opacity 1s;
+}
+
+label {
+  color: white;
+}
